# magicspell

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup_mac.py
.github/workflows/: ci.yml
magicspell/: __init__.py  __main__.py  app.py  clipboard.py  config.py  corrector.py  feedback.py  hotkey.py  launchd.py  llm_client.py  models.py  prompts.py  slack_bot.py  slack_prompts.py
scripts/: build.sh
tests/: conftest.py  test_config.py  test_corrector.py  test_prompts.py  test_slack_bot.py
