[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magicspell"
version = "0.1.0"
description = "LLM-powered proofreading for macOS"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "rumps>=0.4.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "python-dotenv>=1.0.0",
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
magicspell = "magicspell.__main__:main"
magicspell-slack = "magicspell.slack_bot:main"

[tool.setuptools.packages.find]
include = ["magicspell*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
